--- a/app/src/assets/base.css
+++ b/app/src/assets/base.css
@@ -21,9 +21,9 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
   --js-color: rgba(239, 216, 29, 1);
-  --second-color: #7209B7;
+  --second-color: #3A0CA3;
   --third-color: #F72585;
-  --wasm-color: #3A0CA3;
+  --wasm-color: #7209B7;
   --fifth-color: #4361EE;
   --sixth-color: #4CC9F0;
   --nav-color: rgba(242, 92, 117, 0.8);
