--- a/app/src/assets/main.css
+++ b/app/src/assets/main.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  /*overflow-y: hidden;*/
   overflow-y: hidden;
 }
 
@@ -24,8 +25,6 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
-    place-items: center;
   }
 
 }
